--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="schedule-modifier">
             <h1 class="course-header"><div class="header-div">Course</div></h1>
             <div class="course-list">
-                <!-- <div class="course-container"> // listCourseItem
+           <!-- <div class="course-container"> // listCourseItem
                     <div class="course-name-btn">
                         <div class="course-name">Computer Science</div>                
                         <div class="add-hold-delete">                
@@ -48,7 +48,10 @@
                             <div class="delete-hold">
                                 <button class="hold-period"> Hold </button>
                                 <button class="delete-period"> X </button>
-                                Mon 11am-3pm
+                            </div>
+                            <div class="display-period-info">
+                                <h3>Mon </h3>
+                                `${sh}:${sm} - ${eh}:${em} <br>`
                             </div>
                         </li>
 
